--- a/src/App.css
+++ b/src/App.css
@@ -4,15 +4,23 @@
   font-family: 'Montserrat', sans-serif;
   font-size: 13px;
 }
+html{background-color: #2F0743;}
+.App{background-color: #2F0743; width: 100%; height: 100%; padding: 5px 5px;}
+#boto-m{background-color: #2F0743;color: whitesmoke; padding: 7px 10px; margin-left: 5px; box-shadow: 1px 1px 2px black,1px 1px 2px black;}
+#boto-m:hover{cursor: pointer; box-shadow: 1px 1px 2px #620c8d,-1px -1px 2px #620c8d; background-color: #d2bbe6af; color: #620c8d; border:1px solid #2F0743 }
 
+#boto-a{background-color: #2F0743;color: whitesmoke;   box-shadow: 1px 1px 2px  whitesmoke,-1px -1px 2px whitesmoke;  padding:8px 30px; padding-right: 10px; margin-left: 10px; float: right; position: relative; }
+#boto-a:hover{cursor: pointer; box-shadow: 1px 1px 2px #620c8d,-1px -1px 2px #620c8d; color: #620c8d; border:1px solid #2F0743; transition: 0.5s; background-color:#d2bbe6af; }
 .header {
   width: 100%;
-  height: 100px;
+  height: 130px;
   background-color: white;
   position: relative;
   box-shadow: 3px 3px 6px black;
   border-radius: 10px;
 }
+.h4-i{font-size: 12px;}
+.modal-header{background-color: #2F0743; color:white;}
 
 .info {
   width: 100%;
@@ -22,6 +30,9 @@
   background-color: rgba(255, 255, 255, 0.15);
   backdrop-filter: blur(10px);
 }
+
+.list-group{background-color: red;}
+.love{background-color: #2F0743;}
 
 .footer {
   width: 100%;
@@ -39,7 +50,7 @@
   width: 80px;
   height: 80px;
   position: absolute;
-  top: 5px;
+  top: 25px;
   left: 5px;
   border-radius: 5px;
   background-image: url(../src/img/kofigoim.png);
@@ -49,26 +60,23 @@
 
 .kodigo {
   position: absolute;
-  top: 37px;
+  top: 65px;
   left: 100px;
 }
 
 .conta {
   width: 100%;
   height: auto;
-  background: #42275a;
+  background: #2F0743;
   /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #734b6d, #42275a);
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #734b6d, #42275a);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  
   padding: 10px 10px;
   overflow: auto;
 }
 
 .boton {
   position: absolute;
-  bottom: 5px;
+  bottom: 10px;
   right: 5px;
   width: 120px;
   height: 50px;
@@ -97,25 +105,31 @@
   border-radius: 10px;
   box-shadow: 3px 3px 6px black, -3px -3px 6px black;
 }
+#circle{position: absolute; top:12px; left: 10px; color:whitesmoke; text-shadow: 1px 1px 2px transparent; font-size: 25px; border-radius: 365px;}
+.name{position: absolute; top:18px; left:40px; font-size: 15px; }
 
 .bo {
   background-color: transparent;
   border-radius: 10px;
 }
+.id{position: absolute; right: 5px; top:5px; font-size: 10px; border-radius: 10px; background-color: #2F0743; color:whitesmoke; padding: 5px 5px;}
 
 #inpu {
   background-color: rgba(70, 13, 136, 0.459);
   color: orange;
+  
 }
 
 #ico {
   color: orange;
   text-shadow: 1px 1px 2px black, -1px -1px 2px black;
+  
 }
 
 #inpu-conta {
   box-shadow: 2px 2px 3px black, -2px -2px 3px black;
-  width: auto;
+  width:auto; height: 45px;
+  color: orange;
 }
 
 #header-modal {
@@ -130,12 +144,16 @@
 #bot {
   width: 100%;
   height: 60px;
-  background-color: rgba(9, 190, 166, 0.584);
+  /*background-color: rgba(5, 98, 132, 0.784);*/
   margin-bottom: 2px;
-  margin-top: 2px;
+  margin-top: 7px;
   text-align: left;
   position: relative;
+  box-shadow: 2px 2px 6px #72467c,-2px -2px 3px #72467c;
+  border: 1px solid #42275a;
+  color: antiquewhite;
 }
+#dele{position: absolute; top:5px ; left: 5px;}
 
 .bootcamp {
   position: absolute;
@@ -151,3 +169,39 @@
 #act {
   margin-left: 5px;
 }
+#card{background-color: rgba(0,0,0,0.6);}
+.conta-data{width: 100%; height:300px; background-color: #41295a;}
+.vidrio{background-color: rgba(255, 255, 255, .15);  
+  backdrop-filter: blur(5px); padding: 10px 5px; width: 100%; height: 300px;}
+  h6{background-color:none; border:none; padding: 10px 5px; border-radius: 2px; box-shadow: 2px 2px 3px white,-2px -2px 3px white; color: #4d8fd5;}
+  p{color:#eeb90cec; background-color: none; padding: 5px 5px;}
+  .opciones{width: 100%; height: 50px; background-color: none; padding:10px 10px;}
+  .boton-edit{width: 100%; height: 50px; padding: 5px 5px; text-align: right; }
+  .eliminar-b{box-shadow: none;}
+  
+
+  /* width */
+::-webkit-scrollbar {
+  width: 5px;
+  
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #2F0743;
+  border-radius: 10px;
+  
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #af39d7;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #734b6d;
+}
+
+/*css button */
+
